welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: identifier expected but 'override' found.
def override run() {grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); droite(); avance(4); gauche(); grosPot()} 
    ^